* 			Deprecated functions				   *
****************************************************************************

QApplication::setColorMode()
 - see QApplication::setColorSpec(int)
QRegion::xor()
 - see QRegion::eor()
QMessageBox::message()
 - see QMessageBox::information/warning/critical
QMultiLineEdit::getCursorPosition()
 - see QMultiLineEdit::cursorPosition()

****************************************************************************
*      New public/protected functions added to existing classes            *
****************************************************************************

QAccel::repairEventFilter()
QApplication::activeModalWidget()
QApplication::activePopupWidget()
QApplication::allWidgets()
QApplication::doubleClickInterval()
QApplication::hasGlobalMouseTracking()
QApplication::processEvents(int)
QApplication::processOneEvent()
QApplication::setDoubleClickInterval(int)
QApplication::setGlobalMouseTracking(bool)
QApplication::setWinStyleHighlightColor(QColor const &)
QApplication::winStyleHighlightColor()
QApplication::x11ProcessEvent(_XEvent *)
QBoxLayout::className() const
QButton::accel() const
QButton::animateClick()
QButton::enabledChange(bool)
QButton::setAccel(int)
QComboBox::clearValidator()
QComboBox::setStyle(GUIStyle)
QComboBox::setValidator(QValidator *)
QComboBox::validator() const
QDir::convertSeparators(char const *)
QFrame::sizeHint() const
QGridLayout::addColSpacing(int, int)
QGridLayout::addRowSpacing(int, int)
QGridLayout::className() const
QImage::convertDepth(int, int) const
QImage::create(QSize const &, int, int, QImage::Endian)
QImage::createAlphaMask(int) const
QImage::inputFormats()
QImage::outputFormats()
QImage::pixel(int, int) const
QImage::pixelIndex(int, int) const
QImage::setPixel(int, int, unsigned int)
QImage::valid(int, int) const
QImageIO::inputFormats()
QImageIO::outputFormats()
QLabel::movie() const
QLabel::setMovie(QMovie const &)
QLayout::className() const
QLineEdit::clearValidator()