@@ -135,6 +135,8 @@ QMessageBox::message()
  - see QMessageBox::information/warning/critical
 QMultiLineEdit::getCursorPosition()
  - see QMultiLineEdit::cursorPosition()
+QTabDialog::setOKButton()
+ - see QTabDialog::setOkButton()
 
 ****************************************************************************
 *      New public/protected functions added to existing classes            *
